--- a/src/App.scss
+++ b/src/App.scss
@@ -2,20 +2,36 @@
   padding: 1rem;
   // background-color: rgb(41, 20, 113);
   color: #fff;
+  min-height: 100vh;
+  height: fit-content;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 1rem;
 
   .app-header-text {
     text-align: center;
   }
 
-
-
-  // .section-header-text {}
-
-  #individual-bill-container {
+  .section-container {
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    border: 1px solid white;
+    border-radius: 1rem;
+    padding: 1rem;
+    min-width: 50%;
+    width: 100%;
+    max-width: 800px;
+
+    .section-header-text {
+      margin-top: 0;
+    }
+  }
+
+  #individual-bill-container {
+    
 
     & > button {
       margin-top: 1rem;
@@ -33,14 +49,10 @@
   }
 
   #group-costs-container {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-
-    // .group-cost-text-input {
-    //   width: 100%;
-    // }
+    .group-cost-text-input {
+      width: 100%;
+      max-width: 400px;
+    }
   }
 
   #bottom-button-container {
