--- a/src/App.scss
+++ b/src/App.scss
@@ -22,7 +22,7 @@
     border-radius: 1rem;
     padding: 1rem;
     min-width: 50%;
-    width: 100%;
+    width: calc(100% - 2rem);
     max-width: 800px;
 
     .section-header-text {
